--- a/Proyecto_ML/Resources/pdf_template.html
+++ b/Proyecto_ML/Resources/pdf_template.html
@@ -56,16 +56,16 @@
                     <thead style="background-color: #d2d3d6;">
                         <tr>
                             <th class="texto">ID</th>
-                            <th class="texto">OT</th>
-                            <th class="texto">ECO</th>
-                            <th class="texto">MONTO</th>
-                            <th class="texto">FECHA</th>
-                            <th class="texto">RAZON SOCIAL</th>
-                            <th class="texto">NUM FACTURA</th>
-                            <th class="texto">CONCEPTOS</th>
-                            <th class="texto">CIUDAD</th>
-                            <th class="texto">MONTO IMPUESTO</th>
-                            <th class="texto">ESTATUS</th>
+                            <th class="texto">Orden de Trabajo</th>
+                            <th class="texto">Num. Económico</th>
+                            <th class="texto">Monto</th>
+                            <th class="texto">Fecha de Cotización</th>
+                            <th class="texto">Razón Social</th>
+                            <th class="texto">Num. Factura</th>
+                            <th class="texto">Conceptos</th>
+                            <th class="texto">Ciudad</th>
+                            <th class="texto">Monto con Impuesto</th>
+                            <th class="texto">Estatus</th>
                         </tr>
                     </thead>
                     <tbody class="texto_datos">
