Export PDF (Funcional)

--- a/Proyecto_ML/Resources/plantilla.html
+++ b/Proyecto_ML/Resources/plantilla.html
@@ -24,9 +24,8 @@
             <td style="width:20%"></td>
             <td style="width:60%" align="center" valign="top">
                 <table>
-                    <tr><td align="center"><h4 style="margin:0px">CODIGO ESTUDIANTE</h4></td></tr>
-                    <tr><td align="center">Direccion: av. las aguilas 123 </td></tr>
-                    <tr><td align="center">Telefono: 567-546-55</td></tr>
+                    <tr><td align="center"><h4 style="margin:0px">REPORTE DE FACTURAS</h4></td></tr>
+                    <tr><td align="center">MANUEL DE JESUS LARA HERERA</td></tr>
                 </table>
             </td>
             <td style="width:20%">
@@ -67,25 +66,23 @@
                 <table class="border" style="width:100%;">
                     <thead>
                         <tr style="background-color:#D8D8D8">
-                            <th>Cant.</th>
-                            <th>Descripcion</th>
-                            <th>P. Unitario</th>
-                            <th>Importe</th>
+                            <th>ID</th>
+                            <th>Orden de Trabajo</th>
+                            <th>Num. Económico</th>
+                            <th>Monto</th>
+                            <th>Fecha de cotización</th>
+                            <th>Razón Social</th>
+                            <th>Num. Fctura</th>
+                            <th>Conceptos</th>
+                            <th>Ciudad</th>
+                            <th>Monto con Impuesto</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <!--<tr>
-                            <td>1</td>
-                            <td>sdafsda</td>
-                            <td>2.4</td>
-                            <td>2.4</td>
-                        </tr>-->
                         @FILAS
                         <tr>
                             <td style="border: 0px !important"></td>
                             <td style="border: 0px !important"></td>
-                            <td align="right">Total:</td>
-                            <td>@TOTAL</td>
                         </tr>
                     </tbody>
                 </table>
@@ -93,4 +90,3 @@
         </tr>
     </table>
 </body>
-</html>
