Ajustes de interfaz realizados

--- a/Proyecto_ML/Resources/plantilla.html
+++ b/Proyecto_ML/Resources/plantilla.html
@@ -30,14 +30,14 @@
             </td>
             <td style="width:20%">
                 <table class="border" style="width:100%">
-                    <tr><td align="center">Ruc: 3434343434</td></tr>
+                    <tr><td align="center">@FECHA</td></tr>
                     <tr><td align="center" style="background-color:#D8D8D8">BOLETA</td></tr>
                     <tr><td align="center">Nro: 00000111</td></tr>
                 </table>
             </td>
         </tr>
 
-        <tr><td colspan="3" height="20"></td></tr>
+        <!--<tr><td colspan="3" height="20"></td></tr>
 
         <tr>
             <td colspan="2">
@@ -52,12 +52,12 @@
                         <td style="width:20%">Documento:</td>
                         <td style="width:30%;border-bottom:1px solid black">@DOCUMENTO</td>
                         <td style="width:10%">Fecha:</td>
-                        <td style="width:40%;border-bottom:1px solid black">@FECHA</td>
+                        <td style="width:40%;border-bottom:1px solid black"></td>
                     </tr>
                 </table>
             </td>
             <td></td>
-        </tr>
+        </tr>-->
 
         <tr><td colspan="3" height="30"></td></tr>
 
@@ -76,6 +76,7 @@
                             <th>Conceptos</th>
                             <th>Ciudad</th>
                             <th>Monto con Impuesto</th>
+                            <th>Estatus</th>
                         </tr>
                     </thead>
                     <tbody>
