--- a/Proyecto_ML/Resources/plantilla.html
+++ b/Proyecto_ML/Resources/plantilla.html
@@ -74,7 +74,7 @@
                             <th>Razón Social</th>
                             <th>Num. Fctura</th>
                             <th>Conceptos</th>
-                            <th>Ciudad</th>
+                            <th>Estado</th>
                             <th>Monto con Impuesto</th>
                             <th>Estatus</th>
                         </tr>
