--- a/Proyecto_ML/Resources/plantilla.html
+++ b/Proyecto_ML/Resources/plantilla.html
@@ -25,7 +25,7 @@
             <td style="width:60%" align="center" valign="top">
                 <table>
                     <tr><td align="center"><h4 style="margin:0px">REPORTE DE FACTURAS</h4></td></tr>
-                    <tr><td align="center">MANUEL DE JESUS LARA HERERA</td></tr>
+                    <tr><td align="center">MANUEL DE JESUS LARA HERRERA</td></tr>
                 </table>
             </td>
             <td style="width:20%">
