--- a/Proyecto_ML/Resources/plantilla.html
+++ b/Proyecto_ML/Resources/plantilla.html
@@ -30,9 +30,9 @@
             </td>
             <td style="width:20%">
                 <table class="border" style="width:100%">
+                    <tr><td align="center" style="background-color:#D8D8D8">FECHA</td></tr>
                     <tr><td align="center">@FECHA</td></tr>
-                    <tr><td align="center" style="background-color:#D8D8D8">BOLETA</td></tr>
-                    <tr><td align="center">Nro: 00000111</td></tr>
+                    <!--<tr><td align="center">Nro: 00000111</td></tr>-->
                 </table>
             </td>
         </tr>
